[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_emp"
version = "0.0.1"
authors = [
  { name="Enoc Martínez", email="enoc.martinez@upc.edu" },
]
description = "A stupid example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/EnocMartinez/example_package_emp"
Issues = "https://github.com/EnocMartinez/example_package_emp/issues"